--- a/index.html
+++ b/index.html
@@ -18,11 +18,21 @@
     <header>
       <nav>
         <div class="logoWrapper">
-          <p>Lukas<span>Frederiksen</span></p>
+          <p class="logo" style="color: rgba(255, 255, 255, 0.603)">
+            Lukas<span
+              class="logoWhite"
+              style="color: rgba(255, 255, 255, 0.95)"
+              >Frederiksen</span
+            >
+          </p>
         </div>
 
         <div class="menuKnap">
-          <div class="openMenu" onclick="toggle()">menu</div>
+          <div class="openMenu" onclick="toggle()">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </div>
         </div>
         <div class="menu">
           <div class="closeMenu" onclick="togglec()">X</div>
