--- a/index.html
+++ b/index.html
@@ -55,7 +55,15 @@
     </header>
 
     <main>
-      <h1></h1>
+      <h1 class="heading1">
+        <span class="headingSmaller">Hi, I'm Lukas</span> <br />
+        I design meaningful user experiences
+      </h1>
+
+      <p class="heroSubText">
+        Copenhagen based aspriring UX/UI designer currently studying at the
+        Copenhagen school of Design and Technology.
+      </p>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
