Changes to project section

--- a/index.html
+++ b/index.html
@@ -64,6 +64,48 @@
         Copenhagen based aspriring UX/UI designer currently studying at the
         Copenhagen school of Design and Technology.
       </p>
+
+      <section class="projectWrapper">
+        <h2>My Projects</h2>
+
+        <div class="projectGrid">
+          <div class="singleProject">
+            <img src="/images/Group 2.png" alt="" />
+            <div class="projectCardWrapper">
+              <h3 class="projectCardTitle">Siff Røder</h3>
+              <p class="projectCardOverview">Semester project</p>
+              <p class="cardDescription"></p>
+            </div>
+          </div>
+
+          <div class="singleProject">
+            <img src="/images/Group 2.png" alt="" />
+            <div class="projectCardWrapper">
+              <h3 class="projectCardTitle">Siff Røder</h3>
+              <p class="projectCardOverview">Semester project</p>
+              <p class="cardDescription"></p>
+            </div>
+          </div>
+
+          <div class="singleProject">
+            <img src="/images/Group 2.png" alt="" />
+            <div class="projectCardWrapper">
+              <h3 class="projectCardTitle">Siff Røder</h3>
+              <p class="projectCardOverview">Semester project</p>
+              <p class="cardDescription"></p>
+            </div>
+          </div>
+
+          <div class="singleProject">
+            <img src="/images/Group 2.png" alt="" />
+            <div class="projectCardWrapper">
+              <h3 class="projectCardTitle">Siff Røder</h3>
+              <p class="projectCardOverview">Semester project</p>
+              <p class="cardDescription"></p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
