--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="closeMenu" onclick="togglec()">X</div>
 
           <ul class="ul">
-            <li class="li1 li"><a href="#">Home</a></li>
+            <li class="li1 li"><a href="index.html">Home</a></li>
             <li class="li2 li"><a href="#">Projects</a></li>
             <li class="li3 li"><a href="#">About</a></li>
           </ul>
@@ -46,9 +46,9 @@
 
         <div class="deskTopNav">
           <ul class="desktopUl">
-            <li class=""><a href="#">Home</a></li>
-            <li class=""><a href="#">Projects</a></li>
-            <li class=""><a href="#">About</a></li>
+            <li class="deskNavLink"><a href="#">Home</a></li>
+            <li class="deskNavLink"><a href="#">Projects</a></li>
+            <li class="deskNavLink"><a href="#">About</a></li>
           </ul>
         </div>
       </nav>
@@ -61,51 +61,113 @@
       </h1>
 
       <p class="heroSubText">
-        Copenhagen based aspriring UX/UI designer currently studying at the
-        Copenhagen school of Design and Technology.
+        Copenhagen based aspriring UX/UI designer currently studying
+        Multimedia-design at the Copenhagen school of Design and Technology.
       </p>
+
+      <div class="" scrollSection>
+        <div class="scrollDownIcon"></div>
+      </div>
 
       <section class="projectWrapper">
         <h2>My Projects</h2>
 
         <div class="projectGrid">
           <div class="singleProject">
-            <img src="/images/Group 2.png" alt="" />
+            <a class="projectImage" href="siffroder.html">
+              <img src="/images/Group 2.png" alt="" />
+            </a>
             <div class="projectCardWrapper">
               <h3 class="projectCardTitle">Siff Røder</h3>
               <p class="projectCardOverview">Semester project</p>
+              <p class="cardDescription">
+                Design and development of a website with dynamic content for a
+                clothing shop.
+              </p>
+            </div>
+          </div>
+
+          <div class="singleProject">
+            <a class="projectImage" href="ungdomsbyen.html">
+              <img src="/images/Group 2.png" alt="" />
+            </a>
+            <div class="projectCardWrapper">
+              <h3 class="projectCardTitle">Ungdomsbyen</h3>
+              <p class="projectCardOverview">Semester project</p>
+              <p class="cardDescription">
+                Redesigning information architecture and design of a Comany
+                offering lectures about FN world goals to young people.
+              </p>
+            </div>
+          </div>
+
+          <div class="singleProject">
+            <a class="projectImage" href="speeddesign.html">
+              <img src="/images/Group 2.png" alt="" />
+            </a>
+            <div class="projectCardWrapper">
+              <h3 class="projectCardTitle">Speed design in Figma</h3>
+              <p class="projectCardOverview">Design challenge</p>
               <p class="cardDescription"></p>
             </div>
           </div>
 
           <div class="singleProject">
-            <img src="/images/Group 2.png" alt="" />
+            <a class="projectImage" href="frogalypse.html">
+              <img src="/images/Group 2.png" alt="" />
+            </a>
             <div class="projectCardWrapper">
-              <h3 class="projectCardTitle">Siff Røder</h3>
-              <p class="projectCardOverview">Semester project</p>
-              <p class="cardDescription"></p>
-            </div>
-          </div>
-
-          <div class="singleProject">
-            <img src="/images/Group 2.png" alt="" />
-            <div class="projectCardWrapper">
-              <h3 class="projectCardTitle">Siff Røder</h3>
-              <p class="projectCardOverview">Semester project</p>
-              <p class="cardDescription"></p>
-            </div>
-          </div>
-
-          <div class="singleProject">
-            <img src="/images/Group 2.png" alt="" />
-            <div class="projectCardWrapper">
-              <h3 class="projectCardTitle">Siff Røder</h3>
-              <p class="projectCardOverview">Semester project</p>
+              <h3 class="projectCardTitle">Frogalypse game</h3>
+              <p class="projectCardOverview">Design & coding exam project</p>
               <p class="cardDescription"></p>
             </div>
           </div>
         </div>
       </section>
+
+      <footer>
+        <div class="footerWrapper">
+          <p class="footerHeader">Let's connect</p>
+          <p class="footerParagraph">
+            I am currently looking for internship, <br />
+            so let's get in touch!
+          </p>
+          <div class="footerIcons">
+            <a href="">
+              <svg
+                width="32"
+                height="32"
+                viewBox="0 0 32 32"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M0 0H32V32H0V0ZM8.2 13.3V24H11.6V13.3H8.2ZM8 9.9C8 11 8.8 11.8 9.9 11.8C11 11.8 11.8 11 11.8 9.9C11.8 8.8 11 8 9.9 8C8.9 8 8 8.8 8 9.9ZM20.6 24H23.8V17.4C23.8 14.1 21.8 13 19.9 13C18.2 13 17 14.1 16.7 14.8V13.3H13.5V24H16.9V18.3C16.9 16.8 17.9 16 18.9 16C19.9 16 20.6 16.5 20.6 18.2V24Z"
+                  fill="white"
+                />
+              </svg>
+            </a>
+            <a href="mailto:lmf1506@hotmail.com">
+              <svg
+                width="41"
+                height="32"
+                viewBox="0 0 41 32"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  fill-rule="evenodd"
+                  clip-rule="evenodd"
+                  d="M0 1.6L1.46429 0H39.5357L41 1.6V30.4L39.5357 32H1.46429L0 30.4V1.6ZM2.92857 4.912V28.8H38.0714V4.9152L21.4079 18.88H19.6214L2.92857 4.912ZM35.2307 3.2H5.76929L20.5 15.5808L35.2307 3.2Z"
+                  fill="white"
+                />
+              </svg>
+            </a>
+          </div>
+        </div>
+      </footer>
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
