--- a/index.html
+++ b/index.html
@@ -35,7 +35,24 @@
           </div>
         </div>
         <div class="menu">
-          <div class="closeMenu" onclick="togglec()">X</div>
+          <!-- <div class="closeMenu" onclick="togglec()"></div> -->
+
+          <svg
+            class="closeMenu"
+            onclick="togglec()"
+            width="32"
+            height="32"
+            viewBox="0 0 24 24"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M20 20L4 4M20 4L4 20"
+              stroke="white"
+              stroke-width="2"
+              stroke-linecap="round"
+            />
+          </svg>
 
           <ul class="ul">
             <li class="li1 li"><a href="index.html">Home</a></li>
