--- a/siffroder.html
+++ b/siffroder.html
@@ -4,7 +4,244 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Personal Portfolio</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
   </head>
-  <body></body>
+
+  <body>
+    <header>
+      <nav>
+        <div class="logoWrapper">
+          <p class="logo" style="color: rgba(255, 255, 255, 0.603)">
+            Lukas<span
+              class="logoWhite"
+              style="color: rgba(255, 255, 255, 0.95)"
+              >Frederiksen</span
+            >
+          </p>
+        </div>
+
+        <div class="menuKnap">
+          <div class="openMenu" onclick="toggle()">
+            <div class="line"></div>
+            <div class="line"></div>
+            <div class="line"></div>
+          </div>
+        </div>
+        <div class="menu">
+          <div class="closeMenu" onclick="togglec()">X</div>
+
+          <ul class="ul">
+            <li class="li1 li"><a href="index.html">Home</a></li>
+            <li class="li2 li"><a href="#">Projects</a></li>
+            <li class="li3 li"><a href="#">About</a></li>
+          </ul>
+        </div>
+
+        <div class="deskTopNav">
+          <ul class="desktopUl">
+            <li class="deskNavLink"><a href="index.html">Home</a></li>
+            <li class="deskNavLink"><a href="#">Projects</a></li>
+            <li class="deskNavLink"><a href="#">About</a></li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    <main>
+      <div class="headerCenterWrapper">
+        <div class="singleProjectHeader">
+          <h1>Siff Røder</h1>
+          <p class="singleProjectSubHeader">
+            Design and development of a website and visual idenity of a newly
+            founded clothing store located in the suburbs of Copenhagen
+          </p>
+        </div>
+      </div>
+
+      <div class="heroSectionSingleProject">
+        <img src="/images/sif.jpg" alt="" />
+      </div>
+
+      <section class="projectIntroWrapper">
+        <div class="projectOverviewWrapper">
+          <h2>Project overview</h2>
+          <p>
+            This project aimed at creating and designing a website for a client,
+            a newly opened local clothing shop in the suburbs of Copenhagen.
+            This project focused on product design and web development of a
+            website, aswell as creating a consistent visual identity across the
+            Companies social media platforms.
+          </p>
+        </div>
+
+        <div class="projectRecap">
+          <div class="durationWrapper">
+            <h4>Project duration</h4>
+            <p>1 month</p>
+          </div>
+
+          <div class="toolsWrapper">
+            <h4>My toolkit</h4>
+            <p>Figma</p>
+            <p>HTML & CSS</p>
+            <p>Javascript</p>
+            <p>UsabilityHub</p>
+            <p>Wordpress (custom child-theme)</p>
+            <p>Miro</p>
+          </div>
+
+          <div class="roleWrapper">
+            <h4>My role</h4>
+            <p>User research</p>
+            <p>UX/UI design</p>
+            <p>Test facilitation</p>
+            <p>Front-end development</p>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="theChallengeWrapper">
+          <h2>The Challenge</h2>
+          <p>
+            This project aimed at creating and designing a website for a client,
+            a newly opened local clothing shop in the suburbs of Copenhagen.
+            This project focused on product design and web development of a
+            website, aswell as creating a consistent visual identity across the
+            Companies social media platforms.
+          </p>
+        </div>
+
+  <div class="coreChallengeWrapper">
+          <h4>Core Challenges</h2>
+
+          <p> <span class="challengeNumber" style="letter-spacing: 5px">01</span> Allow users to browse products online
+          </p>
+          <p> <span class="challengeNumber">02</span> Create a "reserve item" system
+          </p>
+          <p> <span class="challengeNumber">03</span> Convey atmosphere of the physical shop
+          </p>
+        </div>
+
+
+
+        <section class="procesSection">
+        <div class="processWrapper">
+          <h2>The process</h2>
+<p>Intro tekst design thinking</p>
+
+<div class="processGroupWrapper">
+  <div class="textWrap">
+    <span>01</span>
+    <div class="numberFlexWrap">
+      <h4>User Research</h4>
+    <p>Creation and development of a website and visual idenity 
+of a newly founded clothing store
+located in the suburbs of Copenhagen</p>
+  </div>
+  </div>
+</div>
+
+<div class="processGroupWrapper">
+  <div class="textWrap">
+    <span>02</span>
+    <div class="numberFlexWrap">
+      <h4>Information Architecture</h4>
+    <p>Creation and development of a website and visual idenity 
+of a newly founded clothing store
+located in the suburbs of Copenhagen</p>
+  </div>
+  </div>
+</div>
+
+<div class="processGroupWrapper">
+  <div class="textWrap">
+    <span>03</span>
+    <div class="numberFlexWrap">
+      <h4> Wireframing & prototyping</h4>
+    <p>Creation and development of a website and visual idenity 
+of a newly founded clothing store
+located in the suburbs of Copenhagen</p>
+  </div>
+  </div>
+</div>
+
+<div class="processGroupWrapper">
+  <div class="textWrap">
+    <span>04</span>
+    <div class="numberFlexWrap">
+      <h4>User testing & implementation</h4>
+    <p>Creation and development of a website and visual idenity 
+of a newly founded clothing store
+located in the suburbs of Copenhagen</p>
+  </div>
+  </div>
+</div>
+
+
+
+
+
+
+        </div>
+</section>
+
+
+      </section>
+    </main>
+
+    <footer>
+      <div class="footerWrapper">
+        <p class="footerHeader">Let's connect</p>
+        <p class="footerParagraph">
+          I am currently looking for internship, <br />
+          so let's get in touch!
+        </p>
+        <div class="footerIcons">
+          <a href="">
+            <svg
+              width="32"
+              height="32"
+              viewBox="0 0 32 32"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M0 0H32V32H0V0ZM8.2 13.3V24H11.6V13.3H8.2ZM8 9.9C8 11 8.8 11.8 9.9 11.8C11 11.8 11.8 11 11.8 9.9C11.8 8.8 11 8 9.9 8C8.9 8 8 8.8 8 9.9ZM20.6 24H23.8V17.4C23.8 14.1 21.8 13 19.9 13C18.2 13 17 14.1 16.7 14.8V13.3H13.5V24H16.9V18.3C16.9 16.8 17.9 16 18.9 16C19.9 16 20.6 16.5 20.6 18.2V24Z"
+                fill="white"
+              />
+            </svg>
+          </a>
+          <a href="mailto:lmf1506@hotmail.com">
+            <svg
+              width="41"
+              height="32"
+              viewBox="0 0 41 32"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                fill-rule="evenodd"
+                clip-rule="evenodd"
+                d="M0 1.6L1.46429 0H39.5357L41 1.6V30.4L39.5357 32H1.46429L0 30.4V1.6ZM2.92857 4.912V28.8H38.0714V4.9152L21.4079 18.88H19.6214L2.92857 4.912ZM35.2307 3.2H5.76929L20.5 15.5808L35.2307 3.2Z"
+                fill="white"
+              />
+            </svg>
+          </a>
+        </div>
+      </div>
+    </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
