--- a/siffroder.html
+++ b/siffroder.html
@@ -185,12 +185,12 @@ located in the suburbs of Copenhagen</p>
   </div>
 </div>
 
-
-
-
-
-
+           <section class="solutionSection">
+        <div class="intro">
+          <h2>The solution</h2>
+          <p></p>
         </div>
+      </section>
 </section>
 
 
