--- a/siffroder.html
+++ b/siffroder.html
@@ -188,7 +188,17 @@ located in the suburbs of Copenhagen</p>
            <section class="solutionSection">
         <div class="intro">
           <h2>The solution</h2>
-          <p></p>
+          <p> The website solution is based around the notion of recreating the atmosphere from the physical store. Meanwhile, users are directed to the store to both try out clothing and recieve personal expertise from the shop owners. 
+          </p>
+        </div>
+
+
+
+        <div class="solutionImageWrapper">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
+        <img src="" alt="">
         </div>
       </section>
 </section>
