css variable updates

--- a/index.html
+++ b/index.html
@@ -72,20 +72,21 @@
     </header>
 
     <main>
-      <h1 class="heading1">
-        <span class="headingSmaller">Hi, I'm Lukas</span> <br />
-        I design meaningful user experiences
-      </h1>
+      <div class="frontHeroContainer">
+        <h1 class="heading1">
+          <span class="headingSmaller">Hi, I'm Lukas</span> <br />
+          I design meaningful user experiences
+        </h1>
 
-      <p class="heroSubText">
-        Copenhagen based aspriring UX/UI designer currently studying
-        Multimedia-design at the Copenhagen school of Design and Technology.
-      </p>
+        <p class="heroSubText">
+          Copenhagen based aspriring UX/UI designer currently studying
+          Multimedia-design at the Copenhagen school of Design and Technology.
+        </p>
 
-      <div class="" scrollSection>
-        <div class="scrollDownIcon"></div>
+        <div class="" scrollSection>
+          <div class="scrollDownIcon"></div>
+        </div>
       </div>
-
       <section class="projectWrapper">
         <h2>My Projects</h2>
 
