--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         <div class="deskTopNav">
           <ul class="desktopUl">
             <li class="deskNavLink"><a href="#">Home</a></li>
-            <li class="deskNavLink"><a href="#">Projects</a></li>
+            <li class="deskNavLink"><a href="#projectsSection">Projects</a></li>
             <li class="deskNavLink"><a href="#">About</a></li>
           </ul>
         </div>
@@ -90,10 +90,10 @@
       <section class="projectWrapper">
         <h2>My Projects</h2>
 
-        <div class="projectGrid">
+        <div class="projectGrid" id="projectsSection">
           <div class="singleProject">
             <a class="projectImage" href="siffroder.html">
-              <img src="/images/Group 2.png" alt="" />
+              <img src="/images/siffRoder.jpg" alt="" />
             </a>
             <div class="projectCardWrapper">
               <h3 class="projectCardTitle">Siff Røder</h3>
@@ -107,7 +107,11 @@
 
           <div class="singleProject">
             <a class="projectImage" href="ungdomsbyen.html">
-              <img src="/images/Group 2.png" alt="" />
+              <img
+                src="/images/ungdomsbyen.png
+              "
+                alt=""
+              />
             </a>
             <div class="projectCardWrapper">
               <h3 class="projectCardTitle">Ungdomsbyen</h3>
@@ -121,18 +125,18 @@
 
           <div class="singleProject">
             <a class="projectImage" href="speeddesign.html">
-              <img src="/images/Group 2.png" alt="" />
+              <img src="/images/moon.png" alt="" />
             </a>
             <div class="projectCardWrapper">
-              <h3 class="projectCardTitle">Speed design in Figma</h3>
-              <p class="projectCardOverview">Design challenge</p>
+              <h3 class="projectCardTitle">Figma challenge</h3>
+              <p class="projectCardOverview">Speed design challenge</p>
               <p class="cardDescription"></p>
             </div>
           </div>
 
           <div class="singleProject">
             <a class="projectImage" href="frogalypse.html">
-              <img src="/images/Group 2.png" alt="" />
+              <img src="/images/frogalypse.png" alt="" />
             </a>
             <div class="projectCardWrapper">
               <h3 class="projectCardTitle">Frogalypse game</h3>
