--- a/siffroder.html
+++ b/siffroder.html
@@ -233,10 +233,10 @@ located in the suburbs of Copenhagen</p>
 
 <div class="gridWrap">
         <div class="solutionImageWrapper">
-        <img class="img1" src="/images/TøjForside 1.webp" alt="">
-        <img class="img2" src="/images/TøjudvalgSiff 1.jpg" alt="">
-        <img class="img3" src="/images/Menu 1.jpg" alt="">
-        <img class="img4" src="/images/Single 1.jpg" alt="">
+        <img class="img1" src="/images/forsiden.png" alt="">
+        <img class="img2" src="/images/TøjudvalgSiff 1.png" alt="">
+        <img class="img3" src="/images/Menu 1.png" alt="">
+        <img class="img4" src="/images/Single 1.png" alt="">
         </div>
       </div>
       </section>
