--- a/siffroder.html
+++ b/siffroder.html
@@ -35,7 +35,9 @@
           </div>
         </div>
         <div class="menu">
-             <svg
+          <!-- <div class="closeMenu" onclick="togglec()"></div> -->
+
+          <svg
             class="closeMenu"
             onclick="togglec()"
             width="32"
@@ -54,16 +56,16 @@
 
           <ul class="ul">
             <li class="li1 li"><a href="index.html">Home</a></li>
-            <li class="li2 li"><a href="#">Projects</a></li>
-            <li class="li3 li"><a href="#">About</a></li>
+            <li class="li2 li"><a href="index.html#projectsSection">Projects</a></li>
+            <li class="li3 li"><a href="about.html">About</a></li>
           </ul>
         </div>
 
         <div class="deskTopNav">
           <ul class="desktopUl">
             <li class="deskNavLink"><a href="index.html">Home</a></li>
-            <li class="deskNavLink"><a href="#">Projects</a></li>
-            <li class="deskNavLink"><a href="#">About</a></li>
+            <li class="deskNavLink"><a href="index.html#projectsSection"">Projects</a></li>
+            <li class="deskNavLink"><a href="about.html">About</a></li>
           </ul>
         </div>
       </nav>
@@ -168,7 +170,7 @@
 <p>Intro tekst design thinking</p>
 </div>
 
-<section>
+<section class="procesContainer">
 <div class="processCenterwrap">
         <div class="processWrapper">
      
