--- a/index.html
+++ b/index.html
@@ -56,16 +56,16 @@
 
           <ul class="ul">
             <li class="li1 li"><a href="index.html">Home</a></li>
-            <li class="li2 li"><a href="#">Projects</a></li>
-            <li class="li3 li"><a href="#">About</a></li>
+            <li class="li2 li"><a href="#projectsSection">Projects</a></li>
+            <li class="li3 li"><a href="about.html">About</a></li>
           </ul>
         </div>
 
         <div class="deskTopNav">
           <ul class="desktopUl">
-            <li class="deskNavLink"><a href="#">Home</a></li>
+            <li class="deskNavLink"><a href="index.html">Home</a></li>
             <li class="deskNavLink"><a href="#projectsSection">Projects</a></li>
-            <li class="deskNavLink"><a href="#">About</a></li>
+            <li class="deskNavLink"><a href="about.html">About</a></li>
           </ul>
         </div>
       </nav>
@@ -128,9 +128,33 @@
               <img src="/images/moon.png" alt="" />
             </a>
             <div class="projectCardWrapper">
-              <h3 class="projectCardTitle">Figma challenge</h3>
-              <p class="projectCardOverview">Speed design challenge</p>
-              <p class="cardDescription"></p>
+              <div class="frontProjectTextContainer">
+                <div class="flexContainer">
+                  <h3 class="projectCardTitle">Figma challenge</h3>
+                  <p class="projectCardOverview">Speed design challenge</p>
+                  <p class="cardDescription">
+                    Fun design challenge, where I had to recreate an animated
+                    heropage in under 45 minutes using Figma
+                  </p>
+                </div>
+                <button>
+                  See project
+                  <div class="circle">
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
+                        fill="currentColor"
+                      />
+                    </svg>
+                  </div>
+                </button>
+              </div>
             </div>
           </div>
 
