--- a/index.html
+++ b/index.html
@@ -96,12 +96,33 @@
               <img src="/images/siffRoder.jpg" alt="" />
             </a>
             <div class="projectCardWrapper">
-              <h3 class="projectCardTitle">Siff Røder</h3>
-              <p class="projectCardOverview">Semester project</p>
-              <p class="cardDescription">
-                Design and development of a website with dynamic content for a
-                clothing shop.
-              </p>
+              <div class="frontProjectTextContainer">
+                <div class="flexContainer">
+                  <h3 class="projectCardTitle">Siff Røder</h3>
+                  <p class="projectCardOverview">Semester project</p>
+                  <p class="cardDescription">
+                    Design and development of a website with dynamic content for
+                    a clothing shop.
+                  </p>
+                </div>
+              </div>
+              <button>
+                See project
+                <div class="circle">
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
+                      fill="currentColor"
+                    />
+                  </svg>
+                </div>
+              </button>
             </div>
           </div>
 
@@ -114,12 +135,33 @@
               />
             </a>
             <div class="projectCardWrapper">
-              <h3 class="projectCardTitle">Ungdomsbyen</h3>
-              <p class="projectCardOverview">Semester project</p>
-              <p class="cardDescription">
-                Redesigning information architecture and design of a Comany
-                offering lectures about FN world goals to young people.
-              </p>
+              <div class="frontProjectTextContainer">
+                <div class="flexContainer">
+                  <h3 class="projectCardTitle">Ungdomsbyen</h3>
+                  <p class="projectCardOverview">Semester project</p>
+                  <p class="cardDescription">
+                    Redesigning information architecture and design of a Comany
+                    offering lectures about FN world goals to young people.
+                  </p>
+                </div>
+              </div>
+              <button>
+                See project
+                <div class="circle">
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
+                      fill="currentColor"
+                    />
+                  </svg>
+                </div>
+              </button>
             </div>
           </div>
 
@@ -137,24 +179,24 @@
                     heropage in under 45 minutes using Figma
                   </p>
                 </div>
-                <button>
-                  See project
-                  <div class="circle">
-                    <svg
-                      width="24"
-                      height="24"
-                      viewBox="0 0 24 24"
-                      fill="none"
-                      xmlns="http://www.w3.org/2000/svg"
-                    >
-                      <path
-                        d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
-                        fill="currentColor"
-                      />
-                    </svg>
-                  </div>
-                </button>
               </div>
+              <button>
+                Check out the prototype
+                <div class="circle">
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
+                      fill="currentColor"
+                    />
+                  </svg>
+                </div>
+              </button>
             </div>
           </div>
 
@@ -162,10 +204,37 @@
             <a class="projectImage" href="frogalypse.html">
               <img src="/images/frogalypse.png" alt="" />
             </a>
+
             <div class="projectCardWrapper">
-              <h3 class="projectCardTitle">Frogalypse game</h3>
-              <p class="projectCardOverview">Design & coding exam project</p>
-              <p class="cardDescription"></p>
+              <div class="frontProjectTextContainer">
+                <div class="flexContainer">
+                  <h3 class="projectCardTitle">Frogalypse game</h3>
+                  <p class="projectCardOverview">
+                    Design & coding exam project
+                  </p>
+                  <p class="cardDescription">
+                    First semester project, where i coded and designed my very
+                    own game!
+                  </p>
+                </div>
+              </div>
+              <button>
+                See the game!
+                <div class="circle">
+                  <svg
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path
+                      d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
+                      fill="currentColor"
+                    />
+                  </svg>
+                </div>
+              </button>
             </div>
           </div>
         </div>
