--- a/index.html
+++ b/index.html
@@ -18,13 +18,15 @@
     <header>
       <nav>
         <div class="logoWrapper">
-          <p class="logo" style="color: rgba(255, 255, 255, 0.603)">
-            Lukas<span
-              class="logoWhite"
-              style="color: rgba(255, 255, 255, 0.95)"
-              >Frederiksen</span
-            >
-          </p>
+          <a href="index.html">
+            <p class="logo" style="color: rgba(255, 255, 255, 0.603)">
+              Lukas<span
+                class="logoWhite"
+                style="color: rgba(255, 255, 255, 0.95)"
+                >Frederiksen</span
+              >
+            </p>
+          </a>
         </div>
 
         <div class="menuKnap">
@@ -93,7 +95,7 @@
         <div class="projectGrid" id="projectsSection">
           <div class="singleProject">
             <a class="projectImage" href="siffroder.html">
-              <img src="/images/siffRoder.jpg" alt="" />
+              <img src="/images/siffRoder.jpg" alt="Siff Røder project" />
             </a>
             <div class="projectCardWrapper">
               <div class="frontProjectTextContainer">
@@ -106,23 +108,25 @@
                   </p>
                 </div>
               </div>
-              <button>
-                See project
-                <div class="circle">
-                  <svg
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
-                      fill="currentColor"
-                    />
-                  </svg>
-                </div>
-              </button>
+              <a href="siffroder.html">
+                <button>
+                  See project
+                  <div class="circle">
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
+                        fill="currentColor"
+                      />
+                    </svg>
+                  </div>
+                </button>
+              </a>
             </div>
           </div>
 
@@ -131,7 +135,7 @@
               <img
                 src="/images/ungdomsbyen.png
               "
-                alt=""
+                alt="Ungdomsbyen project"
               />
             </a>
             <div class="projectCardWrapper">
@@ -145,29 +149,30 @@
                   </p>
                 </div>
               </div>
-              <button>
-                See project
-                <div class="circle">
-                  <svg
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
-                      fill="currentColor"
-                    />
-                  </svg>
-                </div>
-              </button>
+              <a href="ungdomsbyen.html">
+                <button>
+                  See project
+                  <div class="circle">
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
+                        fill="currentColor"
+                      />
+                    </svg>
+                  </div></button
+              ></a>
             </div>
           </div>
 
           <div class="singleProject">
             <a class="projectImage" href="speeddesign.html">
-              <img src="/images/moon.png" alt="" />
+              <img src="/images/moon.png" alt="Figma challenge" />
             </a>
             <div class="projectCardWrapper">
               <div class="frontProjectTextContainer">
@@ -180,29 +185,30 @@
                   </p>
                 </div>
               </div>
-              <button>
-                Check out the prototype
-                <div class="circle">
-                  <svg
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
-                      fill="currentColor"
-                    />
-                  </svg>
-                </div>
-              </button>
+              <a href="speeddesign.html">
+                <button>
+                  Check out the prototype
+                  <div class="circle">
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
+                        fill="currentColor"
+                      />
+                    </svg>
+                  </div></button
+              ></a>
             </div>
           </div>
 
           <div class="singleProject">
             <a class="projectImage" href="frogalypse.html">
-              <img src="/images/frogalypse.png" alt="" />
+              <img src="/images/frogalypse.png" alt="Frogalypse game" />
             </a>
 
             <div class="projectCardWrapper">
@@ -218,23 +224,24 @@
                   </p>
                 </div>
               </div>
-              <button>
-                See the game!
-                <div class="circle">
-                  <svg
-                    width="24"
-                    height="24"
-                    viewBox="0 0 24 24"
-                    fill="none"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
-                      fill="currentColor"
-                    />
-                  </svg>
-                </div>
-              </button>
+              <a href="frogalypse.html">
+                <button>
+                  See the game!
+                  <div class="circle">
+                    <svg
+                      width="24"
+                      height="24"
+                      viewBox="0 0 24 24"
+                      fill="none"
+                      xmlns="http://www.w3.org/2000/svg"
+                    >
+                      <path
+                        d="M15.0378 6.34317L13.6269 7.76069L16.8972 11.0157L3.29211 11.0293L3.29413 13.0293L16.8619 13.0157L13.6467 16.2459L15.0643 17.6568L20.7079 11.9868L15.0378 6.34317Z"
+                        fill="currentColor"
+                      />
+                    </svg>
+                  </div></button
+              ></a>
             </div>
           </div>
         </div>
