--- a/siffroder.html
+++ b/siffroder.html
@@ -167,7 +167,8 @@
         <section class="procesSection"> 
               <div class="procesIntro">
           <h2>The process</h2>
-<p>Intro tekst design thinking</p>
+<p>The process of developing the website focused a lot on creating a user centered solution. We involved users every step of development to get constant feedback on new solutions. <br>
+</p>
 </div>
 
 <section class="procesContainer">
@@ -228,7 +229,8 @@ located in the suburbs of Copenhagen</p>
 <section class="solutionSection">
         <div class="intro">
           <h2>The solution</h2>
-          <p> The website solution is based around the notion of recreating the atmosphere from the physical store. Meanwhile, users are directed to the store to both try out clothing and recieve personal expertise from the shop owners. 
+          <p> The website solution included a design system, design guide and all the images and videos were produced by our project group.  <br>
+            I learned a lot about usability testing, using the right heuristics, and especially on how to create new solutions based on users experienced painpoints.
           </p>
         </div>
 
