--- a/about.html
+++ b/about.html
@@ -55,16 +55,16 @@
           </svg>
 
           <ul class="ul">
-            <li class="li1 li"><a href="index.html">Home</a></li>
-            <li class="li2 li"><a href="index.html#projectsSection">Projects</a></li>
+            <li class="li1 li"><a href="home.html">Home</a></li>
+            <li class="li2 li"><a href="home.html#projectsSection">Projects</a></li>
             <li class="li3 li"><a href="about.html">About</a></li>
           </ul>
         </div>
 
         <div class="deskTopNav">
           <ul class="desktopUl">
-            <li class="deskNavLink"><a href="index.html">Home</a></li>
-            <li class="deskNavLink"><a href="index.html#projectsSection"">Projects</a></li>
+            <li class="deskNavLink"><a href="home.html">Home</a></li>
+            <li class="deskNavLink"><a href="home.html#projectsSection"">Projects</a></li>
             <li class="deskNavLink"><a href="about.html">About</a></li>
           </ul>
         </div>
@@ -75,7 +75,7 @@
 
 <section class="aboutIntroSection">
     
-        <h1>About me</h1>
+        <h1 class="abouth1">About me</h1>
 
         <div class="aboutIntro">
             <div class="aboutText">
@@ -84,8 +84,8 @@
 </p>
 <p>Through my education, I've come to love the intersection between design and front-end development.
         I have studied a variety of subjects centered around Human Centered Design, both physical and digital. <br> From my studies, my interest grew in <span> Interaction-design</span> and <span>UX-design</span> and how we can design better solutions for people everywhere.</p>
-     <a href="resume.pdf" target="_blank" class="a">
-                <button class="pdfResume">
+     <a href="resume.pdf" target="_blank" class="pdfResume">
+                <button class="">
                  <span> Download CV </span>
                   <div class="circle">
                     <svg
