--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
     <header>
       <nav>
         <div class="logoWrapper">
-          <a href="index.html">
+          <a href="home.html">
             <p class="logo" style="color: rgba(255, 255, 255, 0.603)">
               Lukas<span
                 class="logoWhite"
@@ -57,7 +57,7 @@
           </svg>
 
           <ul class="ul">
-            <li class="li1 li"><a href="index.html">Home</a></li>
+            <li class="li1 li"><a href="home.html">Home</a></li>
             <li class="li2 li"><a href="#projectsSection">Projects</a></li>
             <li class="li3 li"><a href="about.html">About</a></li>
           </ul>
@@ -65,7 +65,7 @@
 
         <div class="deskTopNav">
           <ul class="desktopUl">
-            <li class="deskNavLink"><a href="index.html">Home</a></li>
+            <li class="deskNavLink"><a href="home.html">Home</a></li>
             <li class="deskNavLink"><a href="#projectsSection">Projects</a></li>
             <li class="deskNavLink"><a href="about.html">About</a></li>
           </ul>
@@ -85,8 +85,22 @@
           Multimedia-design at the Copenhagen school of Design and Technology.
         </p>
 
-        <div class="" scrollSection>
-          <div class="scrollDownIcon"></div>
+        <div class="scrollSection">
+          <span> Scroll to explore </span>
+          <div class="circle">
+            <svg
+              width="24"
+              height="24"
+              viewBox="0 0 24 24"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <path
+                d="M11.0001 3.67157L13.0001 3.67157L13.0001 16.4999L16.2426 13.2574L17.6568 14.6716L12 20.3284L6.34314 14.6716L7.75735 13.2574L11.0001 16.5001L11.0001 3.67157Z"
+                fill="currentColor"
+              />
+            </svg>
+          </div>
         </div>
       </div>
       <section class="projectWrapper">
@@ -187,7 +201,7 @@
               </div>
               <a href="speeddesign.html">
                 <button>
-                  Check out the prototype
+                  Check out prototype
                   <div class="circle">
                     <svg
                       width="24"
