--- a/ungdomsbyen.html
+++ b/ungdomsbyen.html
@@ -56,16 +56,16 @@
           </svg>
 
           <ul class="ul">
-            <li class="li1 li"><a href="index.html">Home</a></li>
-            <li class="li2 li"><a href="index.html#projectsSection">Projects</a></li>
+            <li class="li1 li"><a href="home.html">Home</a></li>
+            <li class="li2 li"><a href="home.html#projectsSection">Projects</a></li>
             <li class="li3 li"><a href="about.html">About</a></li>
           </ul>
         </div>
 
         <div class="deskTopNav">
           <ul class="desktopUl">
-            <li class="deskNavLink"><a href="index.html">Home</a></li>
-            <li class="deskNavLink"><a href="index.html#projectsSection"">Projects</a></li>
+            <li class="deskNavLink"><a href="home.html">Home</a></li>
+            <li class="deskNavLink"><a href="home.html#projectsSection"">Projects</a></li>
             <li class="deskNavLink"><a href="about.html">About</a></li>
           </ul>
         </div>
