--- a/frogalypse.html
+++ b/frogalypse.html
@@ -18,13 +18,14 @@
     <header>
       <nav>
         <div class="logoWrapper">
+           <a href="home.html">
           <p class="logo" style="color: rgba(255, 255, 255, 0.603)">
             Lukas<span
               class="logoWhite"
               style="color: rgba(255, 255, 255, 0.95)"
               >Frederiksen</span
             >
-          </p>
+          </p></a>
         </div>
 
         <div class="menuKnap">
