--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
 
         <p class="heroSubText">
           Copenhagen based aspriring UX/UI designer currently studying
-          Multimedia-design at the Copenhagen school of Design and Technology.
+          Multimedia design at the Copenhagen school of Design and Technology.
         </p>
 
         <div class="scrollSection">
