--- a/about.html
+++ b/about.html
@@ -80,13 +80,13 @@
 
         <div class="aboutIntro">
             <div class="aboutText">
-            <p>Hi there! My name is Lukas Maximilian, and I am currently studying multimedia design at Copenhagen School of Design and Technology. <br>
+            <p>Hi there! My name is Lukas Maximilian, and I am currently studying multimedia design at Copenhagen School of Design and Technology. 
             I am passionate about improving peoples experiences through design and i love working together with motivated creative minds.   <br>
 </p>
 <p>Through my education, I've come to love the intersection between design and front-end development.
         I have studied a variety of subjects centered around Human Centered Design, both physical and digital. <br> From my studies, my interest grew in <span> Interaction-design</span> and <span>UX-design</span> and how we can design better solutions for people everywhere.</p>
      <a href="resume.pdf" target="_blank" class="pdfResume">
-                <button class="">
+                <button class="protoButton">
                  <span> Download CV </span>
                   <div class="circle">
                     <svg
@@ -109,7 +109,7 @@
                   </div>
                 </button>
               </a></div>
-            <img class="profileImage" src="/images/profile.jpg" alt="">
+            <img class="profileImage" src="images/profile.jpg" alt="">
         </div>
             
        </section>
