--- a/frogalypse.html
+++ b/frogalypse.html
@@ -83,7 +83,7 @@
       </div>
 
       <div class="frogalypseHeader">
-        <img src="/images/froghead.png" alt="Siff Roeder hero image" />
+        <img src="images/froghead.png" alt="Siff Roeder hero image" />
       </div>
 
       <section class="projectIntroWrapper"> 
@@ -154,10 +154,10 @@
 
 <div class="gridWrap">
         <div class="solutionImageWrapper gameImages">
-        <img class="img1 gameImage" src="/images/games.png" alt="">
-        <img class="img2" src="/images/sketch.png" alt="">
-        <img class="img3" src="/images/background.png" alt="">
-        <img class="img4" src="/images/UI-Point 1.png" alt="">
+        <img class="img1 gameImage" src="images/games.png" alt="">
+        <img class="img2" src="images/sketch.png" alt="">
+        <img class="img3" src="images/background.png" alt="">
+        <img class="img4" src="images/UI-Point 1.png" alt="">
         </div>
       </div>
       </section>
