--- a/home.html
+++ b/home.html
@@ -109,7 +109,7 @@
         <div class="projectGrid" id="projectsSection">
           <div class="singleProject">
             <a class="projectImage" href="siffroder.html">
-              <img src="/images/siffRoder.jpg" alt="Siff Røder project" />
+              <img src="images/siffRoder.jpg" alt="Siff Røder project" />
             </a>
             <div class="projectCardWrapper">
               <div class="frontProjectTextContainer">
@@ -123,8 +123,8 @@
                 </div>
               </div>
               <a href="siffroder.html">
-                <button>
-                  See project
+                <button class="frontButton">
+                  <span class="buttonSpan">See project</span>
                   <div class="circle">
                     <svg
                       width="24"
@@ -147,7 +147,7 @@
           <div class="singleProject">
             <a class="projectImage" href="ungdomsbyen.html">
               <img
-                src="/images/ungdomsbyen.png
+                src="images/ungdomsbyen.png
               "
                 alt="Ungdomsbyen project"
               />
@@ -164,8 +164,8 @@
                 </div>
               </div>
               <a href="ungdomsbyen.html">
-                <button>
-                  See project
+                <button class="frontButton">
+                  <span class="buttonSpan"> See project</span>
                   <div class="circle">
                     <svg
                       width="24"
@@ -186,7 +186,7 @@
 
           <div class="singleProject">
             <a class="projectImage" href="speeddesign.html">
-              <img src="/images/moon.png" alt="Figma challenge" />
+              <img src="images/moon.png" alt="Figma challenge" />
             </a>
             <div class="projectCardWrapper">
               <div class="frontProjectTextContainer">
@@ -200,8 +200,8 @@
                 </div>
               </div>
               <a href="speeddesign.html">
-                <button>
-                  Check out prototype
+                <button class="frontButton">
+                  <span class="buttonSpan"> Check out prototype</span>
                   <div class="circle">
                     <svg
                       width="24"
@@ -222,7 +222,7 @@
 
           <div class="singleProject">
             <a class="projectImage" href="frogalypse.html">
-              <img src="/images/frogalypse.png" alt="Frogalypse game" />
+              <img src="images/frogalypse.png" alt="Frogalypse game" />
             </a>
 
             <div class="projectCardWrapper">
@@ -239,8 +239,8 @@
                 </div>
               </div>
               <a href="frogalypse.html">
-                <button>
-                  See the game!
+                <button class="frontButton">
+                  <span class="buttonSpan"> See the game!</span>
                   <div class="circle">
                     <svg
                       width="24"
