--- a/siffroder.html
+++ b/siffroder.html
@@ -84,7 +84,7 @@
       </div>
 
       <div class="heroSectionSingleProject siffroderHeader">
-        <img src="/images/siffRoder.jpg" alt="Siff Roeder hero image" />
+        <img src="images/siffRoder.jpg" alt="Siff Roeder hero image" />
       </div>
 
       <section class="projectIntroWrapper"> 
@@ -238,10 +238,10 @@ located in the suburbs of Copenhagen</p>
 
 <div class="gridWrap">
         <div class="solutionImageWrapper">
-        <img class="img1" src="/images/forsiden.png" alt="">
-        <img class="img2" src="/images/TøjudvalgSiff 1.png" alt="">
-        <img class="img3" src="/images/Menu 1.png" alt="">
-        <img class="img4" src="/images/Single 1.png" alt="">
+        <img class="img1" src="images/forsiden.png" alt="">
+        <img class="img2" src="images/TøjudvalgSiff 1.png" alt="">
+        <img class="img3" src="images/Menu 1.png" alt="">
+        <img class="img4" src="images/Single 1.png" alt="">
         </div>
       </div>
       </section>
