--- a/speeddesign.html
+++ b/speeddesign.html
@@ -85,7 +85,7 @@
       </div>
 
       <div class="heroSectionSingleProject moonHeader">
-        <img src="/images/moon.png" alt="Moon design challenge" />
+        <img src="images/moon.png" alt="Moon design challenge" />
       </div>
 
       <section class="projectIntroWrapper"> 
@@ -153,8 +153,8 @@
 
 <div class="gridWrap">
         <div class="solutionImageWrapper">
-        <img class="img1" src="/images/måne.png" alt="">
-        <img class="img2 imgmoonproces" src="/images/moonproces.png" alt="">
+        <img class="img1" src="images/måne.png" alt="">
+        <img class="img2 imgmoonproces" src="images/moonproces.png" alt="">
        
         </div>
       </div>
