--- a/ungdomsbyen.html
+++ b/ungdomsbyen.html
@@ -84,7 +84,7 @@
       </div>
 
       <div class="heroSectionSingleProject ungdomsbyenHeader">
-        <img src="/images/ungdomsbyen.png" alt="Siff Roeder hero image" />
+        <img src="images/ungdomsbyen.png" alt="Siff Roeder hero image" />
       </div>
 
       <section class="projectIntroWrapper"> 
@@ -222,10 +222,10 @@
 
 <div class="gridWrap">
         <div class="solutionImageWrapper">
-        <img class="img1" src="/images/ungdomsbyenFrontpage.png" alt="">
-        <img class="img2" src="/images/kurserUngdomsbyen.png" alt="">
-        <img class="img3" src="/images/logodesign.png" alt="">
-        <img class="img4" src="/images/ungdomsbyenTallimg.png" alt="">
+        <img class="img1" src="images/ungdomsbyenFrontpage.png" alt="">
+        <img class="img2" src="images/kurserUngdomsbyen.png" alt="">
+        <img class="img3" src="images/logodesign.png" alt="">
+        <img class="img4" src="images/ungdomsbyenTallimg.png" alt="">
         </div>
       </div>
       </section>
