--- a/home.html
+++ b/home.html
@@ -81,8 +81,8 @@
         </h1>
 
         <p class="heroSubText">
-          Copenhagen based aspriring UX/UI designer currently studying
-          Multimedia design at the Copenhagen school of Design and Technology.
+          Copenhagen based aspriring UX designer currently studying Multimedia
+          design at the Copenhagen school of Design and Technology.
         </p>
 
         <div class="scrollSection">
@@ -201,7 +201,7 @@
               </div>
               <a href="speeddesign.html">
                 <button class="frontButton">
-                  <span class="buttonSpan"> Check out prototype</span>
+                  <span class="buttonSpan"> Check out the solution</span>
                   <div class="circle">
                     <svg
                       width="24"
