--- a/siffroder.html
+++ b/siffroder.html
@@ -135,11 +135,8 @@
         <div class="theChallengeWrapper">
         
           <p>
-            This project aimed at creating and designing a website for a client,
-            a newly opened local clothing shop in the suburbs of Copenhagen.
-            This project focused on product design and web development of a
-            website, aswell as creating a consistent visual identity across the
-            Companies' social media platforms.
+            As the company did not have a website, this project encompassed the whole process of identifying user needs and creating a new visual identity.
+            The company wished for an only sphere where local shoppers could browse products, and let them put items aside in the physical shop. This was so that users could come and easily try out their chosen items before purchase.
           </p>
         </div>
 
