--- a/speeddesign.html
+++ b/speeddesign.html
@@ -130,9 +130,9 @@
           <h2>The solution</h2>
           <p> As the project was only 45 minutes, the solution is obviously a bit rough on the edges. It's tricky to replicate the timing of transitions in such a short span, but it was a really fun challenge.
           </p>
-           <a href="https://www.figma.com/proto/35TvX6E0vvf2mYopEJbHay/Untitled?page-id=85%3A159&node-id=85%3A642&viewport=521%2C426%2C0.07&scaling=scale-down&starting-point-node-id=85%3A160" target="_blank" class="prototypeButton">
-                <button class="">
-                  Test the prototype
+              <a href="https://www.figma.com/proto/35TvX6E0vvf2mYopEJbHay/Untitled?page-id=85%3A159&node-id=85%3A642&viewport=521%2C426%2C0.07&scaling=scale-down&starting-point-node-id=85%3A160" target="_blank" class="prototypeButton"">
+                <button class="frontButton">
+                  <span class="buttonSpan">Check out prototype</span>
                   <div class="circle">
                     <svg
                       width="24"
@@ -146,8 +146,9 @@
                         fill="currentColor"
                       />
                     </svg>
-                  </div></button
-              ></a>
+                  </div>
+                </button>
+                </a>
         </div>
 
 
