--- a/home.html
+++ b/home.html
@@ -56,9 +56,9 @@
             />
           </svg>
 
-          <ul class="ul">
+           <ul class="ul">
             <li class="li1 li"><a href="home.html">Home</a></li>
-            <li class="li2 li"><a href="#projectsSection">Projects</a></li>
+            <li class="li2 li"><a href="home.html#projectsSection">Projects</a></li>
             <li class="li3 li"><a href="about.html">About</a></li>
           </ul>
         </div>
@@ -66,7 +66,7 @@
         <div class="deskTopNav">
           <ul class="desktopUl">
             <li class="deskNavLink"><a href="home.html">Home</a></li>
-            <li class="deskNavLink"><a href="#projectsSection">Projects</a></li>
+            <li class="deskNavLink"><a href="home.html#projectsSection"">Projects</a></li>
             <li class="deskNavLink"><a href="about.html">About</a></li>
           </ul>
         </div>
