--- a/frogalypse.html
+++ b/frogalypse.html
@@ -176,7 +176,7 @@
           so let's get in touch!
         </p>
         <div class="footerIcons">
-          <a href="">
+          <a href="https://www.linkedin.com/in/lukas-maximilian-frederiksen-137b38205/">
             <svg
               width="32"
               height="32"
