--- a/siffroder.html
+++ b/siffroder.html
@@ -256,7 +256,7 @@ located in the suburbs of Copenhagen</p>
           so let's get in touch!
         </p>
         <div class="footerIcons">
-          <a href="">
+          <a href="https://www.linkedin.com/in/lukas-maximilian-frederiksen-137b38205/">
             <svg
               width="32"
               height="32"
