--- a/about.html
+++ b/about.html
@@ -85,7 +85,7 @@
 </p>
 <p>Through my education, I've come to love the intersection between design and front-end development.
         I have studied a variety of subjects centered around Human Centered Design, both physical and digital. <br> From my studies, my interest grew in <span> Interaction-design</span> and <span>UX-design</span> and how we can design better solutions for people everywhere.</p>
-     <a href="Resume/CV.pdf" target="_blank" class="pdfResume">
+     <a href="Resume/Resumé.pdf" target="_blank" class="pdfResume">
                 <button class="protoButton">
                  <span> Download CV </span>
                   <div class="circle">
